--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="top-wrapper" >
       <div class="theme-wrapper">
-        <p>Themes</p>
+        <p>Theme</p>
         <div class="toggle-container">
           
           <input type="checkbox" id="checkbox"/>      
