--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <!-- Mobile viewport optimized: j.mp/bplateviewport -->
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+
     <title>The Investment Calculator</title>
   </head>
 
@@ -24,7 +31,7 @@
     <div id="form-wrapper">
       <form id="main-form" action="" method="post">
         <div class="input-wrapper">
-          <label class="labels" for="startAge">Start Age:</label>
+          <label class="labels" for="startAge">Start Age</label>
           <input
             class="input"
             type="number"
@@ -34,7 +41,7 @@
           />
         </div>
         <div class="input-wrapper">
-          <label class="labels" for="endAge">End Age:</label>
+          <label class="labels" for="endAge">End Age</label>
           <input
             class="input"
             type="number"
@@ -44,7 +51,7 @@
           />
         </div>
         <div class="input-wrapper">
-          <label class="labels" for="startAmount">Start Amount $:</label>
+          <label class="labels" for="startAmount">Start Amount ($)</label>
           <input
             class="input"
             type="number"
@@ -54,7 +61,7 @@
           />
         </div>
         <div class="input-wrapper">
-          <label class="labels" for="yield">Investment yield Rate (%):</label>
+          <label class="labels" for="yield">Investment yield (%)</label>
           <input
             class="input"
             type="number"
@@ -65,7 +72,7 @@
           />
         </div>
         <div class="input-wrapper">
-          <label class="labels" for="dividendRate">Dividend yield Rate:</label>
+          <label class="labels" for="dividendRate">Dividend yield (%)</label>
           <input
             class="input"
             type="number"
@@ -75,7 +82,7 @@
           />
         </div>
         <div class="input-wrapper">
-          <label class="labels" for="divReinvest">Reinvest Dividend?:</label>
+          <label class="labels" for="divReinvest">Reinvest Dividend Y/N</label>
           <input
             class="input"
             type="checkbox"
@@ -85,7 +92,7 @@
         </div>
         <div class="input-wrapper">
           <label class="labels" for="startPaymentAmount"
-            >Monthly Payment Credit:</label
+            >Monthly Investment ($)</label
           >
           <input
             class="input"
@@ -97,7 +104,7 @@
         </div>
         <div class="input-wrapper">
           <label class="labels" for="monthlyPaymentMax"
-            >Monthly Payment Credit Max:</label
+            >Max Monthly Investment ($)</label
           >
           <input
             class="input"
@@ -109,7 +116,7 @@
         </div>
         <div class="input-wrapper">
           <label class="labels" for="monthlyPaymentIncreasePa"
-            >Monthly Payment Increase (PA):</label
+            >Monthly Investment Increase (PA)</label
           >
           <input
             class="input"
@@ -120,7 +127,7 @@
           />
         </div>
         <div class="input-wrapper">
-          <label class="labels" for="inflationRate">Inflation Rate:</label>
+          <label class="labels" for="inflationRate">Inflation Rate (%)</label>
           <input
             class="input"
             type="number"
