Modified Header title text

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     
     <header id="title-header">
-      <h1>Welcome to the Investment Calculator</h1>
+      <h1>Investment Calculator</h1>
       <p><i>Alter the below propertis to calculate your investment!</i></p>
     </header>
 
