--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
   <body>
     <div class="top-wrapper" >
+      <div class="socials-Wrapper">
+        <div class="socials">
+          <a href="https://github.com/dMacGit/investorapp/" title="dMacGit/investorapp" target="_blank" class="fab fa-github"></a>
+        </div>
+      </div>
       <div class="theme-wrapper">
         <p>Theme</p>
         <div class="toggle-container">
